--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,8 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <version>2.22.2</version>
                 <configuration>
                     <includes>
                         <include>**/Runner.java</include>
